--- a/laravel/public/about.html
+++ b/laravel/public/about.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>keto</title>
+      <title>Eeshan</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -103,7 +103,7 @@
             <div class="row">
                <div class="col-md-5">
                   <div class="titlepage">
-                    
+
                      <p class="margin_0">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum. </p>
                      <a class="read_more" href="Javascript:void(0)"> Read More</a>
                   </div>
@@ -117,7 +117,7 @@
          </div>
       </div>
       <!-- end about -->
-     
+
 
       <!--  footer -->
       <footer>
