--- a/laravel/public/blog.html
+++ b/laravel/public/blog.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>keto</title>
+      <title>Eeshan</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -103,7 +103,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                    
+
                      <p class="margin_0">Lorem Ipsum available, but the majority have suffered </p>
                   </div>
                </div>
@@ -149,7 +149,7 @@
          </div>
       </div>
       <!-- end blog -->
-     
+
       <!--  footer -->
       <footer>
          <div class="footer">
