--- a/laravel/public/gallery.html
+++ b/laravel/public/gallery.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>keto</title>
+      <title>Eeshan</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -100,7 +100,7 @@
       <!-- gallery -->
       <div  class="gallery">
          <div class="container">
-           
+
             <div class="row">
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
@@ -146,7 +146,7 @@
          </div>
       </div>
       <!-- end gallery -->
-    
+
       <!--  footer -->
       <footer>
          <div class="footer">
