--- a/laravel/public/room.html
+++ b/laravel/public/room.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>keto</title>
+      <title>Eeshan</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -178,7 +178,7 @@
          </div>
       </div>
       <!-- end our_room -->
-     
+
       <!--  footer -->
       <footer>
          <div class="footer">
